--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
 		"react-icons": "^4.9.0",
 		"react-loader-spinner": "^6.1.6",
 		"react-responsive": "^9.0.2",
-		"react-router-dom": "^6.13.0"
+		"react-router-dom": "^6.13.0",
+		"react-router-hash-link": "^2.4.3"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.37",
