Made major changes, added content and valid images

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-	"name": "Nietypowa Sowa - Aerograf i malarstwo",
-	"description": "Grafik, projektant, miłośnik i entuzjasta sztuki, który na codzień maluje obrazy, tworzy zakładki i odświeża wyblakłe trampki.",
+	"name": "Nietypowa Sowa - Aerograf",
+	"description": "Twój kask jest po prostu zwyczajny? Bak motocykla prosi się o dodatkowe kolory? Napisz, a coś na to poradzimy!",
 	"start_url": "./",
 	"scope": "/",
 	"display": "standalone",
