--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"dayjs": "^1.11.9",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
+		"lodash": "^4.17.21",
 		"react": "^18.2.0",
 		"react-cookie-consent": "^8.0.1",
 		"react-dom": "^18.2.0",
