--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "portfoliopage",
+	"name": "nietypowa-sowa",
 	"private": true,
 	"version": "0.0.0",
 	"type": "module",
@@ -7,16 +7,10 @@
 		"dev": "vite",
 		"build": "vite build",
 		"lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-		"preview": "vite preview",
-		"start": "node server/index.cjs"
+		"preview": "vite preview"
 	},
 	"dependencies": {
 		"@emailjs/browser": "^3.11.0",
-		"axios": "^1.6.7",
-		"cors": "^2.8.5",
-		"dayjs": "^1.11.9",
-		"dotenv": "^16.3.1",
-		"express": "^4.18.2",
 		"lodash": "^4.17.21",
 		"react": "^18.2.0",
 		"react-cookie-consent": "^8.0.1",
@@ -37,8 +31,6 @@
 		"eslint-plugin-react": "^7.32.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.3.4",
-		"postcss": "^8.4.24",
-		"tailwindcss": "^3.3.3",
 		"vite": "^5.4.10"
 	}
 }
