--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
 		"react-cookie-consent": "^8.0.1",
 		"react-dom": "^18.2.0",
 		"react-google-recaptcha": "^3.1.0",
+		"react-helmet-async": "^2.0.5",
 		"react-icons": "^4.9.0",
 		"react-loader-spinner": "^6.1.6",
 		"react-responsive": "^9.0.2",
-		"react-router-dom": "^6.13.0",
+		"react-router-dom": "^7.6.0",
 		"react-router-hash-link": "^2.4.3"
 	},
 	"devDependencies": {
